# servo-like-arduino

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: endless_end_to_end_movement.py  endless_servo_sweep.py  endless_sweep.py  move_smooth.py  multi_servo_control.py  servo_test.py
src/servo_like_arduino/: __init__.py  board.py  servo.py  utils.py
