[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servo-like-arduino"
version = "0.2.0"
description = "Arduino-style servo control using PyFirmata2"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pyfirmata2",
    "pyserial"
]

authors = [
    {name = "Vihaan Parlikar"}
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"